--- a/Prodavnica/WebContent/registracija.html
+++ b/Prodavnica/WebContent/registracija.html
@@ -12,9 +12,10 @@
 <body>
 	<h1>Registraciona strana</h1>
 	<a href = "index.html">back to index</a><br>
-	<form class = "box">
+	<form class = "box" action = "RegistracioniServlet" method = "get">
 		<input type = "text" placeholder = "User name" name = "userName"><br>
-		<input type = "password" placeholder = "Password" name = "password">
+		<input type = "password" placeholder = "Password" name = "password"><br><br>
+		<input type = "submit" value="registruj se">
 	</form>
 </body>
 </html>
