--- a/Prodavnica/WebContent/index.html
+++ b/Prodavnica/WebContent/index.html
@@ -6,7 +6,13 @@
 </head>
 <body>
 	<h1>Dobro došli na indeks stranu</h1>
-	<a href = "registracija.html">registruj se</a>
+	<a href = "registracija.html">registruj se</a><br>
+	<h4>Log in</h2>
+	<form action = "LoginServlet" method="post">
+		<input type="text" placeholder="User name" name = "userName"> 
+		<input type="password" placeholder="Password" name = "password"> 
+		<input type="submit" value = "Prijavi se"> 
+	</form>
 	
 </body>
 </html>
